# itvalleyplatform

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: PRD.md  README.md  index.html  package.json  style.css
itvalleyplatform/: __init__.py  config.py  db.py  exceptions.py  middleware.py
itvalleyplatform/cli/: __init__.py  generate_rls.py  init_platform.py
itvalleyplatform/templates/: platform_init.sql.jinja  rls.sql.jinja
petraplatform/: __init__.py  auth.py  db.py  middleware.py  tenant_context.py
petraplatform/cli/: __init__.py  init_platform.py
petraplatform/templates/: platform_init.sql.jinja  rls.sql.jinja
sandbox/: app.py
tests/: conftest.py  test_auth_wrapper.py  test_cli_generate_rls.py  test_cli_init_platform.py  test_master_bypass.py  test_require_permission.py  test_require_tenant.py
